2009-12-19  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Xan Lopez.

        Tests for https://bugs.webkit.org/show_bug.cgi?id=28153
        can't middle-button paste within a single window

        * LayoutTests/platform/gtk/editing/pasteboard/middle-button-paste-expected.txt: Added
        * LayoutTests/platform/gtk/editing/pasteboard/middle-button-paste.html: Adeed
2009-12-19  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Xan Lopez.

        Fixed the problem when pasting in the same window with the
        middle-button, now we store a reference to the range instead of
        requesting it every time, and we do not release it until the
        clipboard is requested.
        https://bugs.webkit.org/show_bug.cgi?id=28153

        * WebKit/gtk/WebCoreSupport/EditorClientGtk.cpp:
        * WebKit/gtk/WebCoreSupport/EditorClientGtk.h:

Canonical link: https://commits.webkit.org/43802@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52389 268f45cc-cd09-0410-ab3c-d52691b4dbfc