third_party/WebKit/WebKit/gtk/WebCoreSupport/EditorClientGtk.h
@@ -35,6 +35,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include <wtf/Deque.h>
 #include <wtf/Forward.h>
+#include <gtk/gtk.h>
 
 typedef struct _WebKitWebView WebKitWebView;
 
@@ -121,6 +122,10 @@ namespace WebKit {
 
     private:
         WebKitWebView* m_webView;
+        RefPtr<WebCore::Range> m_range;
+
+        friend void clipboard_get_contents_cb(GtkClipboard* clipboard, GtkSelectionData* selection_data, guint info, gpointer data);
+        friend void clipboard_clear_contents_cb(GtkClipboard* clipboard, gpointer data);
     };
 }
 
